tests/compilation_failure_tests/non_unit_variant/variant_tuple_empty_second.stderr
error: Variant B is not a unit variant, all variants must be unit variants to derive EnumRotate
 --> tests/compilation_failure_tests/non_unit_variant/variant_tuple_empty_second.rs:6:5
  |
6 |     B(),
  |     ^^^

error[E0601]: `main` function not found in crate `$CRATE`
 --> tests/compilation_failure_tests/non_unit_variant/variant_tuple_empty_second.rs:8:2
  |
8 | }
  |  ^ consider adding a `main` function to `$DIR/tests/compilation_failure_tests/non_unit_variant/variant_tuple_empty_second.rs`
