tests/compilation_failure_tests/non_unit_variant/variant_tuple_empty_second.rs
use derive_enum_rotate::EnumRotate;

#[derive(EnumRotate)]
enum Enum {
    A,
    B(),
    C,
}
